syntax = "proto3";

option java_package = "com.xoff.abittracked.proto";
option java_multiple_files = true;

message TaskABT {
  string content=1;
}
